[package]
name = "telink-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
pcap = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.94"
confy = "0.5.1"